fix: fixed contrast issue for Lighthouse accessibility desktop score

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -13,7 +13,7 @@ $headings-font-family: 'Poppins', $font-family-sans-serif;
 
 $blue: #20C1ED !default;
 $cyan: #9DE5F9 !default;
-$green: #8CC63F !default;
+$green: #269C32 !default;
 
 $dark: #1d1d1d !default;
 $yiq-contrasted-threshold:  200 !default;
